# facility-feed-service

./: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  Readme.md  config.py  db-init.sql  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
app/db/: connection.py  queries.py
app/feed/: facilityfeed_generator.py  factory.py  interfaces.py
app/repositories/: facility.py
app/storage/: interfaces.py  local.py  s3.py
app/utils/: logger.py
deploy/: setup_cloudwatch.sh
tests/: test_db_connection.py  test_feed_facilityfeed_generator.py  test_feed_factory.py  test_repository_facility.py  test_storage_local.py  test_storage_s3.py  test_utils_logger.py
